=== ongoing ===

- Bugfix: next_month calculation was faulty
- Bugfix: Making timezone aware row values naive
- Showing whole year on year view, even future months

=== 0.1.4 ===

- No changes... PyPi doesn't see 0.1.3, WTF?

=== 0.1.3 ===

- Added filters to admins

=== 0.1.2 ===

- Bugfix: Filter for outstanding invoices was wrong
- Added unicode method to CurrencyRate model
- Rendering months with localtime off on year_view.html

=== 0.1.1 ===

- sqlite and postgres return different things when truncating a date, applied
  quick fix so that it works with postgres / need to find a workaround so that
  tests and real-world-usage both work

=== 0.1 ===
- Initial commit


# Suggested file syntax:
#
# === (ongoing) ===
# - this is always on top of the file
# - when you release a new version, you rename the last `(ongoing)` to the new
#   version and add a new `=== (ongoing) ===` to the top of the file
#
# === 1.0 ===
# - a major version is created when the software reached a milestone and is 
#   feature complete
#
# === 0.2 ===
# - a minor version is created when new features or significant changes have
#   been made to the software.
#
# === 0.1.1 ==
# - for bugfix releases, fixing typos in the docs, restructuring things, simply
#   anything that doesn't really change the behaviour of the software you
#   might use the third digit which is also sometimes called the build number.