@@ -170,6 +170,7 @@
                         <th>{% trans "ID" %}</th>
                         <th>{% trans "Date" %}</th>
                         <th>{% trans "Invoice number" %}</th>
+                        <th>{% trans "Description" %}</th>
                         <th>{% trans "Currency" %}</th>
                         <th>{% trans "Amount (net)" %}</th>
                         <th>{% trans "VAT" %}</th>
@@ -182,6 +183,7 @@
                         <td><a href="{% url "admin:account_keeping_invoice_change" invoice.pk %}">{{ invoice.pk }}</a></td>
                             <td>{{ invoice.invoice_date|date:"Y-m-d" }}</td>
                             <td>{{ invoice.invoice_number|default:"n/a" }}</td>
+                            <td>{{ invoice.description|default:"n/a" }}</td>
                             <td>{{ invoice.currency.iso_code }}</td>
                             <td>{{ invoice.amount_net|currency }}</td>
                             <td>{{ invoice.vat }}</td>
